# profile_hmm

./: README.md  meson.build  run_student_code.sh  run_student_code_on_examples.sh  setup.sh
examples/test1/: model.pages  scores.txt
examples/test2/: model.pages  scores.txt
examples/test3/: model.pages  scores.txt
src/: main.cpp
